sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: Int(1) does not take parameters
var ecart  = getNombreValeurs-1()
                               ^